# django-simple-cms

./: .gitignore  CLAUDE.md  README.md  README_TODO.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
cms_project/: jinja2.py  settings.py  urls.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/jinja2/contact/: contact.html  success.html
contact/migrations/: 0001_initial.py
contact/templates/contact/: contact.html  success.html
pages/: admin.py  context_processors.py  models.py  urls.py  views.py
pages/jinja2/pages/: category.html  detail.html  home.html  landing.html  search.html  tag.html
pages/migrations/: 0001_initial.py
pages/templates/pages/: category.html  detail.html  search.html
static/css/: input.css  main.css
static/css/atoms/: _buttons.css  _forms.css  _typography.css
static/css/molecules/: _cards.css  _form-fields.css  _navigation.css  _search.css
static/css/organisms/: _footer.css  _header.css  _sidebar.css
static/css/pages/: _article.css  _contact.css  _home.css
static/css/templates/: _grid.css  _page-layouts.css
static/js/: contact-validation.js
templates/: base-landing.html  base.html
templates/molecules/: page-card.html  pagination.html  search-form.html
templates/organisms/: academy-section.html  benefits-section.html  footer-landing.html  footer.html  header-landing.html  header.html  hero-section.html  self-doubt-section.html  services-section.html  testimonials-section.html  videos-section.html  welcome-section.html  when-section.html
