[project]
name = "django-tailwind"
version = "0.1.0"
description = ""
authors = [
    {name = "Stefano Ostrowski",email = "ostrowski@addvendo.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ansible = "^11.4.0"
black = "^25.1.0"
coverage = "^7.8.0"
dj-inmemorystorage = "^2.1.0"
django-debug-toolbar = "^5.1.0"
factory-boy = "^3.3.3"
flake8 = "^7.2.0"
isort = "^6.0.1"
pytest-cov = "^6.1.1"
pytest-django = "^4.11.1"
python-magic = "^0.4.27"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
